--- a/style.css
+++ b/style.css
@@ -50,16 +50,16 @@ h1{
 }
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
+    display: none; /*Hidden by default*/
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    left: 50%;
+    top: 50%;
+    width: 300px; /* Full width */
+    height: 300px; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: transparent; /* Fallback color */
+    background-color: whitesmoke; /* Black w/ opacity */
   }
   
   /* Modal Content/Box */
@@ -73,7 +73,7 @@ h1{
   
   /* The Close Button */
   .close {
-    color: #aaa;
+    color: rgb(147, 2, 2);
     float: right;
     font-size: 28px;
     font-weight: bold;
